roles/ingress/files/6-ingress-to-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  namespace: ingress
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    - port: 18080
      protocol: TCP
      name: http-mgmt
    - port: 443
      protocol: TCP
      targetPort: 443
      name: https
  selector:
    app: nginx-ingress
